--- a/styles/index.scss
+++ b/styles/index.scss
@@ -111,6 +111,8 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 
   > a.logo {
     color: #102830;
@@ -132,7 +134,9 @@ header {
     height: 50px;
 
     > li {
-      padding-left: 40px;
+      &:not(:first-child) {
+        padding-left: 40px;
+      }
 
       > a {
         line-height: 50px;
@@ -157,7 +161,7 @@ header {
 
 section {
   @extend .full-width;
-  padding: 80px 0;
+  padding: 80px 20px;
   text-align: center;
 
   > .cta {
@@ -186,11 +190,8 @@ section {
   row-gap: 40px;
   flex-wrap: wrap;
   justify-content: center;
-
-  &.wide {
-    margin-left: -100px;
-    margin-right: -100px;
-  }
+  margin-left: -100px;
+  margin-right: -100px;
 
   > li {
     @extend .box;
@@ -199,7 +200,7 @@ section {
     padding: 30px;
     text-align: left;
     box-sizing: border-box;
-    flex: 0 0 calc(33% - 15px);
+    flex: 0 0 calc(33% - 12px);
     gap: 15px;
 
     div.number {
@@ -325,6 +326,8 @@ footer {
   padding-bottom: 120px;
   background: #102830;
   color: white;
+  padding-left: 20px;
+  padding-right: 20px;
 
   > .horizontal {
     border-bottom: 1px solid rgba(255, 255, 255, 0.05);
@@ -387,6 +390,7 @@ footer {
   > div.image {
     display: flex;
     align-items: center;
+    justify-content: center;
 
     > div.outline {
       background: white;
@@ -399,11 +403,13 @@ footer {
 
       > img {
         width: 260px;
+        max-width: 260px;
         height: auto;
         display: block;
 
         &.big {
           width: 400px;
+          max-width: 400px;
         }
       }
     }
@@ -412,6 +418,7 @@ footer {
   > div.text {    
     display: flex;
     align-items: center;
+    justify-content: center;
     
     .button-like {
       margin-top: 40px;
@@ -537,6 +544,41 @@ footer {
   }
 }
 
+// Small computer screen
+@media only screen and (max-width: 1280px) {
+  .boxes {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+// Tablet & mobile
+@media only screen and (max-width: 780px) {
+  .hide-on-tablet {
+    display: none;
+  }
+
+  header > ul > li:not(:first-child) {
+    padding-left: 20px;
+  }
+
+  ul.vertical-points {
+    text-align: left;
+    margin-top: 40px;
+  }
+
+  .text-by-image {
+    flex-direction: column;
+    text-align: center;
+    gap: 60px;
+  
+    > div.image > div.outline > img {
+      width: 100% !important;
+    }
+  }
+}
+
+// Mobile
 @media only screen and (max-width: 544px) {
   body:not(.force-desktop) {
     .hide-on-mobile {
@@ -580,8 +622,6 @@ footer {
     }
 
     header {
-      padding-left: 20px;
-      padding-right: 20px;
       position: sticky;
       top: 0px;
       margin-top: -$header-box-shadow-height;
@@ -653,37 +693,14 @@ footer {
       }
     }
 
-    .text-by-image {
-      flex-direction: column;
-      text-align: center;
-      gap: 60px;
-    
-      > div.image {
-        padding: 0 20px;
-
-        > div.outline {
-          padding: 20px;
-
-          > img {
-            width: 100%;
-          }
-        }
-      }
-    }
-
     .boxes {
       flex-direction: column;
       column-gap: 20px;
       row-gap: 20px;
+      margin-top: 40px;
 
       > li {
         border-radius: 20px;
-      }
-
-      &.wide {
-        margin-left: 0;
-        margin-right: 0;
-        margin-top: 40px;
       }
     }
     
@@ -705,11 +722,6 @@ footer {
           margin-top: 2px;
         }
       }
-    }
-
-    ul.vertical-points {
-      text-align: left;
-      margin-top: 40px;
     }
 
     footer {
