--- a/styles/index.scss
+++ b/styles/index.scss
@@ -199,8 +199,8 @@ section {
     background: white;
     padding: 30px;
     text-align: left;
-    box-sizing: border-box;
-    flex: 0 0 calc(33% - 12px);
+    flex: 1 1 auto;
+    width: calc(33% - 20px); // 3 columns
     gap: 15px;
 
     div.number {
@@ -277,7 +277,7 @@ ul.vertical-points {
   background: #f7fbfe;
   width: 60px;
   height: 60px;
-  flex: 0 0 60px;
+  flex: 0 0 auto;
   border-radius: 100%;
   text-align: center;
 
@@ -550,6 +550,10 @@ footer {
     margin-left: 0;
     margin-right: 0;
   }
+
+  .boxes > li {
+    width: calc(50% - 20px);  // 2 columns
+  }
 }
 
 // Tablet & mobile
@@ -701,6 +705,7 @@ footer {
 
       > li {
         border-radius: 20px;
+        width: calc(100%); // 1 column
       }
     }
     
