--- a/styles/subscriptions.scss
+++ b/styles/subscriptions.scss
@@ -36,20 +36,20 @@
     box-sizing: content-box;
 
     > .title {
-      font-weight: 400;
+      @extend .w-400;
       font-size: 16px;
       text-transform: uppercase;
       margin: 10px 0;
     }
 
     > .price {
-      font-weight: 900;
+      @extend .w-700;
       font-size: 24px;
       margin: 24px 0;
       color: #102830;
 
       > span {
-        font-weight: 400;
+        @extend .w-400;
         font-size: 16px;
         color: #024751;
       }
