--- a/styles/subscriptions.scss
+++ b/styles/subscriptions.scss
@@ -36,27 +36,26 @@
     box-sizing: content-box;
 
     > .title {
-      @extend .w-400;
       font-size: 16px;
       text-transform: uppercase;
       margin: 10px 0;
     }
 
     > .price {
-      @extend .w-700;
-      font-size: 24px;
       margin: 24px 0;
-      color: #102830;
 
       > span {
-        @extend .w-400;
-        font-size: 16px;
-        color: #024751;
+        color: #102830;
+        font-size: 24px;
       }
     }
 
     > .description {
       font-size: 16px;
+      
+      > span {
+        color: #102830;
+      }
     }
   }
 
@@ -134,7 +133,6 @@
         }
 
         > .price {
-          font-size: 28px;
           margin: 10px 0;
         }
 
