--- a/styles/index.scss
+++ b/styles/index.scss
@@ -37,18 +37,18 @@ h3 {
   margin-bottom: 10px;
 }
 
-// Weights: 400 - 900
 .playfair-display {
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
   font-style: normal;
+  font-display: swap;
 }
 
-// Weights: 200 - 900
 .source-sans {
   font-family: "Source Sans 3", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  font-display: swap;
 }
 
 .w-400 {
