--- a/styles/index.scss
+++ b/styles/index.scss
@@ -388,6 +388,11 @@ footer {
         padding: 10px;
       }
 
+      &.iphone {
+        padding: 0;
+        border-radius: 40px;
+      }
+
       > img {
         width: 260px;
         max-width: 260px;
